--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -4,11 +4,11 @@ UPGRADE_PACKAGES=true
 RENV_PATHS_CACHE_HOST=/opt/local/renv/cache
 RENV_PATHS_CACHE_CONTAINER=/renv/cache
 RENV_PATHS_CACHE=/renv/cache
-USER=eric
+USER=jjfan
 USERID=1000
 GROUPID=1000
 PASSWORD=1rstudio
-VOLUME_PATH=/home/eric/r_dev_projects
+VOLUME_PATH=/home/jjfan/r_dev_projects
 LOCAL_PORT=2010
 QUARTO_VERSION=latest
 RSTUDIO_VERSION=2022.02.1-461
